# 3rd-yr-group-project

./: .firebaserc  README.md  app.py  build.gradle.kts  cookie.html  cors.json  crew_example.py  esbuild.config.js  eslint.config.js  firebase.json  flask1.py  flktest.py  hello.js  index.html  package-lock.json  package.json  settings.gradle.kts  style.css  test.cjs  test.js  test.py  userCreds(plain).json  userCreds.json
.firebase/: hosting.cHVibGlj.cache
ACT-Web/: .gitignore  README.md  cors.json  esbuild.config.js  firebase.json  package-lock.json  package.json
ACTAPP/: settings.gradle.kts
act-ai/: main.py
app/: build.gradle.kts
database/: A_userCreds.json  schema.json
firebase/: .firebaserc  firebase.json  firestore.rules  package-lock.json  package.json
functions/: clientSideTest.js  clientSideTest_AIengine.js  clientSideTest_admin.js  clientSideTest_manager.js  index.js  package-lock.json  package.json  test.js
gradle/: libs.versions.toml
javascripts/: bundle.js
public/: bundle.js  clients.html  cryptos.html  home.js  homepage.html  individual_clients.html  loggedinhomepage.html  login.html  package-lock.json  predict.html  pricealerts.html  report.html  reportshow.html  singup.html  (+4 more)
stock_analysis/: .gitignore  README.md  blog.md  blog.txt  package-lock.json  package.json  pyproject.toml  recommendation.md  recommendation.txt  report.md  report.txt
stock_analysis/src/stock_analysis/: crew.py  main.py  send_data.py
stock_analysis/src/stock_analysis/config/: agents.yaml  tasks.yaml
stock_analysis/src/stock_analysis/tools/: custom_tool.py
(+142 files in other folders)
