[project]
name = "stock_analysis"
version = "0.1.0"
description = "stock_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "yfinance>=0.2.50",
]

[project.scripts]
stock_analysis = "stock_analysis.main:run"
run_crew = "stock_analysis.main:run"
train = "stock_analysis.main:train"
replay = "stock_analysis.main:replay"
test = "stock_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
